@@ -2806,6 +2806,10 @@ void DOSBOX_SetupConfigSections(void) {
     Pint = secprop->Add_int("hma minimum allocation",Property::Changeable::WhenIdle,0);
     Pint->Set_help("Minimum allocation size for HMA in bytes (equivalent to /HMAMIN= parameter).");
 
+    Pbool = secprop->Add_bool("ansi.sys",Property::Changeable::WhenIdle,true);
+    Pbool->Set_help("If set (by default), ANSI.SYS emulation is on. If clear, ANSI.SYS is not emulated and will not appear to be installed.\n"
+                    "NOTE: This option has no effect in PC-98 mode where MS-DOS systems integrate ANSI.SYS into the DOS kernel.");
+
     Pbool = secprop->Add_bool("log console",Property::Changeable::WhenIdle,false);
     Pbool->Set_help("If set, log DOS CON output to the log file.");
 
